# Suscripcion_Synology_Calendar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json.example  conftest.py  delete_calendars.py  events.json.example  main.py  pyproject.toml  requirements.txt  sync_ics_to_caldav.py
docs/: README.md  api-reference.md  arquitectura.md  calendarios-invisibles.md  configuracion.md  instalacion-synology.md  instalacion.md  sincronizacion-automatica.md  troubleshooting.md  uso-basico.md
ics_sync/: __init__.py  caldav_helpers.py  cli.py  config.py  dsm_client.py  fetcher.py  grouping.py  logging_.py  sync.py
