[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ics-sync"
version = "0.2.0"
description = "Sync external ICS subscription calendars to Synology Calendar via CalDAV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "caldav>=1.3.9",
    "icalendar>=5.0.12",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "recurring-ical-events>=2.1",
    "ruff>=0.4",
]

[project.scripts]
ics-sync = "ics_sync.cli:main"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]   # long lines are already capped via line-length

[tool.ruff.lint.isort]
known-first-party = ["ics_sync"]
